aws-vpc-by-modular-approach/modules/security_group/main.tf
# Creates a security group with inbound rules for ports 22,80 and allows all outbound traffic.
resource "aws_security_group" "sg_22_80" {
  name   = "sg_22"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Lokesh-SG"
}
}
